--- a/product_management/pubspec.yaml
+++ b/product_management/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   shimmer: ^3.0.0
   shared_preferences: ^2.2.2
   fl_chart: ^0.66.0
+  google_fonts: ^6.3.3
+  animations: ^2.1.1
 
 dev_dependencies:
   flutter_test:
